--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "fastapi-ratelimiter"
+name = "fastapi-ratelimit"
 version = "0.0.1"
 description = ""
 authors = ["Gleb Garanin <glebgar567@gmail.com>"]
