:memo: Change documentation's font

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,12 +21,10 @@ theme:
 
   palette:
     scheme: slate
-    primary: black
-    accent: blue
+    primary: blue grey
 
   font:
-    text: Roboto Mono
-    code: Monaco
+    code: Fira Code
 
   favicon: logo.png
 
